esp32DevTemplate/build/log/idf_py_stdout_output_8320
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\espIdfStandardSetup\ESP-IDF-Setup-Guide\esp32DevTemplate\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.4.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/build/bootloader/bootloader.bin"
Bootloader binary size 0x51c0 bytes. 0x2e40 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi/station/src/station_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/wifi/station/src/station_example_main.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20250730\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/build/config -IC:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main -IC:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main/wifi/station/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32s3/register -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32s3/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/include/local -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/wifi_apps/nan_app/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_phy/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_netif/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.4.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/wifi/station/src/station_example_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\wifi\station\src\station_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/wifi/station/src/station_example_main.c.obj -c C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main/wifi/station/src/station_example_main.c
C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main/wifi/station/src/station_example_main.c: In function 'wifi_init_sta':
C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main/wifi/station/src/station_example_main.c:133:35: error: 'ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD' undeclared (first use in this function)
  133 |             .threshold.authmode = ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD,
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main/wifi/station/src/station_example_main.c:133:35: note: each undeclared identifier is reported only once for each function it appears in
C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main/wifi/station/src/station_example_main.c:134:28: error: 'ESP_WIFI_SAE_MODE' undeclared (first use in this function)
  134 |             .sae_pwe_h2e = ESP_WIFI_SAE_MODE,
      |                            ^~~~~~~~~~~~~~~~~
C:/espIdfStandardSetup/ESP-IDF-Setup-Guide/esp32DevTemplate/main/wifi/station/src/station_example_main.c:135:35: error: 'EXAMPLE_H2E_IDENTIFIER' undeclared (first use in this function)
  135 |             .sae_h2e_identifier = EXAMPLE_H2E_IDENTIFIER,
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
[4/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
